--- a/templates/eda/product_analysis.html
+++ b/templates/eda/product_analysis.html
@@ -9,7 +9,7 @@
                   <h2 class="mb-2">Data Distribution Visualization</h2>
 
                 </div>
-                <img src="data:image/png;base64,{{ image }}" alt="order by hour of the day">
+        <img src="data:image/png;base64,{{ image }}" alt="Product Analysis Visualization">
               </div>
 
             </div>
