--- a/templates/index.html
+++ b/templates/index.html
@@ -127,6 +127,9 @@
                 <div class="nav-item-wrapper"><a class="nav-link label-1 {% if ( menu == 'lstm') %}  active {%  endif %}" href="{{ url_for('lstm') }}" role="button" data-bs-toggle="" aria-expanded="false">
                       <div class="d-flex align-items-center"><span class="nav-link-icon"><span data-feather="calendar"></span></span><span class="nav-link-text-wrapper"><span class="nav-link-text">LSTM</span></span></div>
                     </a></div>
+                <div class="nav-item-wrapper"><a class="nav-link label-1 {% if ( menu == 'database') %}  active {%  endif %}" href="{{ url_for('database') }}" role="button" data-bs-toggle="" aria-expanded="false">
+                      <div class="d-flex align-items-center"><span class="nav-link-icon"><span data-feather="calendar"></span></span><span class="nav-link-text-wrapper"><span class="nav-link-text">Database</span></span></div>
+                    </a></div>
                   <div class="nav-item-wrapper"><a class="nav-link dropdown-indicator label-1" href="#CRM" role="button" data-bs-toggle="collapse" aria-expanded="false" aria-controls="CRM">
                       <div class="d-flex align-items-center">
                         <div class="dropdown-indicator-icon"><span class="fas fa-caret-right"></span></div><span class="nav-link-icon"><span data-feather="phone"></span></span><span class="nav-link-text">Sarimax</span>
